--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "link",
   "version": "0.1.0",
-  "homepage": "https/DmitryDemidov48.github.io/link-short",
+  "homepage": "https://dmitrydemidov48.github.io/link-short",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
