--- a/package.json
+++ b/package.json
@@ -10,7 +10,18 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "gh-pages": "^6.1.1",
+    "axios": "^1.6.7",
+    "dotenv": "^16.4.1",
+    "formik": "^2.4.5",
+    "react-icons": "^5.0.1",
+    "react-loading-skeleton": "^3.4.0",
+    "react-router-dom": "^6.22.0",
+    "react-table": "^7.8.0",
+    "react-toastify": "^10.0.4",
+    "styled-components": "^6.1.8",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
